--- a/package.json
+++ b/package.json
@@ -4,18 +4,35 @@
   "description": "= Learning JavaScript, 3rd Edition == Chapter 2: JavaScript Development Tools",
   "main": "main.js",
   "dependencies": {
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel": "^6.23.0",
+    "babel-node": "0.0.1-security",
     "moment-timezone": "^0.5.27",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^6.1.3",
     "gulp-eslint": "^6.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel --preset es2015 Server.js -o build/Server.es5.js",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beatz4/LearningJavascript_Study.git"
+  },
+  "bugs": {
+    "url": "https://github.com/beatz4/LearningJavascript_Study/issues"
+  },
+  "homepage": "https://github.com/beatz4/LearningJavascript_Study#readme"
 }
